@@ -25,15 +25,15 @@ ECHO_INFO()
     if [ X"$1" == X"-n" ]; then
         shift 1
         if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-            echo -ne "\033[42m${INFO_FLAG}\033[0m $@"
+            echo -ne "\033[42m${_INFO_FLAG}\033[0m $@"
         else
-            echo -ne "${INFO_FLAG} $@"
+            echo -ne "${_INFO_FLAG} $@"
         fi
     else
         if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-            echo -e "\033[42m${INFO_FLAG}\033[0m $@"
+            echo -e "\033[42m${_INFO_FLAG}\033[0m $@"
         else
-            echo -e "${INFO_FLAG} $@"
+            echo -e "${_INFO_FLAG} $@"
         fi
     fi
 }
@@ -43,15 +43,15 @@ ECHO_QUESTION()
     if [ X"$1" == X"-n" ]; then
         shift 1
         if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-            echo -ne "\033[45m${QUESTION_FLAG}\033[0m $@"
+            echo -ne "\033[45m${_QUESTION_FLAG}\033[0m $@"
         else
-            echo -ne "${QUESTION_FLAG} $@"
+            echo -ne "${_QUESTION_FLAG} $@"
         fi
     else
         if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-            echo -e "\033[45m${QUESTION_FLAG}\033[0m $@"
+            echo -e "\033[45m${_QUESTION_FLAG}\033[0m $@"
         else
-            echo -e "${QUESTION_FLAG} $@"
+            echo -e "${_QUESTION_FLAG} $@"
         fi
     fi
 }
@@ -61,34 +61,34 @@ ECHO_ERROR()
     if [ X"$1" == X"-n" ]; then
         shift 1
         if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-            echo -ne "\033[41m${ERROR_FLAG}\033[0m $@"
+            echo -ne "\033[41m${_ERROR_FLAG}\033[0m $@"
         else
-            echo -ne "${ERROR_FLAG} $@"
+            echo -ne "${_ERROR_FLAG} $@"
         fi
     else
         if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-            echo -e "\033[41m${ERROR_FLAG}\033[0m $@"
+            echo -e "\033[41m${_ERROR_FLAG}\033[0m $@"
         else
-            echo -e "${ERROR_FLAG} $@"
+            echo -e "${_ERROR_FLAG} $@"
         fi
     fi
 }
 
 ECHO_DEBUG()
 {
-    if [ X"${DEBUG}" == X"YES" ]; then
+    if [ X"${_DEBUG}" == X"YES" ]; then
         if [ X"$1" == X"-n" ]; then
             shift 1
             if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-                echo -ne "\033[42m${DEBUG_FLAG}\033[0m $@"
+                echo -ne "\033[42m${_DEBUG_FLAG}\033[0m $@"
             else
-                echo -ne "${DEBUG_FLAG} $@"
+                echo -ne "${_DEBUG_FLAG} $@"
             fi
         else
             if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-                echo -e "\033[42m${DEBUG_FLAG}\033[0m $@"
+                echo -e "\033[42m${_DEBUG_FLAG}\033[0m $@"
             else
-                echo -e "${DEBUG_FLAG} $@"
+                echo -e "${_DEBUG_FLAG} $@"
             fi
         fi
     else
@@ -103,12 +103,12 @@ backup_file()
         for conf_file in $@; do
             if [ -f ${conf_file} ]; then
                 if [ X"${TERM}" == X"xterm" -o X"${TERM}" == X"linux" -o X"${TERM}" == X"pcconsole" ]; then
-                    if [ X"${DEBUG}" == X"YES" ]; then
-                        echo -e "\033[43m${BACKUP_FLAG}\033[0m ${conf_file} -> $(basename ${conf_file}).${DATE}."
+                    if [ X"${_DEBUG}" == X"YES" ]; then
+                        echo -e "\033[43m${_BACKUP_FLAG}\033[0m ${conf_file} -> $(basename ${conf_file}).${DATE}."
                     fi
                 else
-                    if [ X"${DEBUG}" == X"YES" ]; then
-                        echo -e "${BACKUP_FLAG} ${conf_file} -> $(basename ${conf_file}).${DATE}."
+                    if [ X"${_DEBUG}" == X"YES" ]; then
+                        echo -e "${_BACKUP_FLAG} ${conf_file} -> $(basename ${conf_file}).${DATE}."
                     fi
                 fi
 
