@@ -85,8 +85,8 @@ export DATE="$(/bin/date +%Y.%m.%d.%H.%M.%S)"
 export LC_ALL=C
 
 # Debug mode: YES, NO.
-if [ X"${DEBUG}" != X'YES' ]; then
-    export DEBUG='NO'
+if [ X"${_DEBUG}" != X'YES' ]; then
+    export _DEBUG='NO'
 fi
 
 # Genrate a random string.
@@ -103,11 +103,11 @@ export DOC_FILE="${ROOTDIR}/Documentations"
 export STATUS_FILE="${ROOTDIR}/.status"
 
 # Output flag.
-export INFO_FLAG="< INFO >"
-export ERROR_FLAG="< ERROR >"
-export QUESTION_FLAG="< Question >"
-export BACKUP_FLAG="< Backup >"
-export DEBUG_FLAG="< DEBUG >"
+export _INFO_FLAG="< INFO >"
+export _ERROR_FLAG="< ERROR >"
+export _QUESTION_FLAG="< Question >"
+export _BACKUP_FLAG="< Backup >"
+export _DEBUG_FLAG="< DEBUG >"
 
 export CONF_MSG="#
 # File generated by ${PROG_NAME} (${DATE}):
