@@ -710,9 +710,9 @@ EOF
             status="\$status_install_port_$portname"
             if [ X"$(eval echo ${status})" != X"DONE" ]; then
                 cd /usr/ports/${i} && \
-                    ECHO_INFO "Installing port: ${i} ..." && \
-                    make clean && \
-                    make install clean
+                    ECHO_INFO "Installing port: ${i} ..."
+                    echo "export status_installing_port_${portname}='processing'" >> ${STATUS_FILE}
+                    make clean && make install clean
 
                     if [ X"$?" == X"0" ]; then
                         echo "export status_install_port_${portname}='DONE'" >> ${STATUS_FILE}
