@@ -1,3 +1,7 @@
+iRedMail-0.8.0-beta4:
+    * Fixed:
+        + DEBUG=NO in iRedMail.sh breaks postfix installation on FreeBSD.
+
 iRedMail-0.8.0-beta3:
     * Enable PostgreSQL support on FreeBSD, RHEL/CentOS 6.
     * Add shell scripts to backup OpenLDAP and/or MySQL in cron by default.
@@ -9,8 +13,7 @@ iRedMail-0.8.0-beta3:
         + FreeBSD: 7.x
     * Enable greylist opt-in in Policyd-1.x by default.
     * It now works on Ubuntu Linux 12.04 (precise). Tested on Alpha 2.
-    * It now works on Linux Mint 12 (based on Ubuntu, code name: lisa), LMDE
-      (based on Debian).
+    * It now works on Linux Mint 12 (based on Ubuntu, code name: lisa).
     * Add share folder support within Dovecot 2.
     * Fixed:
         + Incorrect postrotate command for dovecot log files.
